--- a/test/dummy/app/views/posts/show.html.erb
+++ b/test/dummy/app/views/posts/show.html.erb
@@ -10,6 +10,17 @@
   <%= @post.content %>
 </p>
 
+<p>
+	<b>Created by:</b>
+	<%= @post.created_by.email %>
+</p>
+
+<%- if @post.updated_by %>
+	<p>
+		<b>Updated by:</b>
+		<%= @post.updated_by.email %>
+	</p>
+<%- end %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
